--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "@lwright.js/hello-world-component",
+  "name": "hello-world-happy-testing-component",
   "version": "0.1.0",
-  "private": true,
+  "files": [
+    "build"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
